# H00_cpp_basics_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
contrib/: CMakeLists.txt
include/: tasks.hpp
src/: tasks.cpp
tests/: CMakeLists.txt  runner_tests.cpp  tasks_tests.cpp
